2005-01-26  Dalibor Topic  <robilad@kaffe.org>

        Resynced with GNU Classpath.

	2005-01-25  Michael Koch  <konqueror@gmx.de>

        * javax/swing/DefaultCellRenderer.java: Removed.

2005-01-26  Dalibor Topic  <robilad@kaffe.org>

        Resynced with GNU Classpath.

	2005-01-25  Michael Koch  <konqueror@gmx.de>

        * javax/swing/AbstractButton.java
        (fireItemStateChanged): Made protected.
        (fireActionPerformed): Likewise.
        (fireStateChanged): Likewise.
        * javax/swing/DefaultButtonModel.java
        (fireItemStateChanged): Likewise.
        (fireActionPerformed): Likewise.
        (fireStateChanged): Likewise.
        * javax/swing/JApplet.java
        (JApplet): Removed.
        (frameInit): Likewise.
        (setRootPane): Made protected.
        (createRootPane): Likewise.
        * javax/swing/JComponent.java
        (getClientProperty): Likewise.
        (putClientProperty): Likewise.
        * javax/swing/JEditorPane.java
        (getContentType): Likewise.
        (setContentType): Likewise.
        * javax/swing/JFrame.java
        (setRootPane): Likewise.
        (createRootPane): Likewise.
        * javax/swing/JInternalFrame.java
        (getFocusCycleRootAncestor): Made final. Added @since tag.
        (isFocusCycleRoot): Likewise.
        (getWarningString): Made final.
        * javax/swing/JScrollBar.java
        (changeListener): Removed.
        (changeEvent): Likewise.
        (createChangeListener): Likewise.
        (fireStateChanged): Likewise.
        (addChangeListener): Likewise.
        (removeChangeListener): Likewise.
        (getChangeListeners): Likewise.
        * javax/swing/JScrollPane.java
        (createViewport): Made protected.
        * javax/swing/JViewport.java
        (addImpl): Likewise.
        (setBorder): New method.
        * javax/swing/JWindow.java
        (setRootPane): Made protected.
        (createRootPane): Likewise.
        * javax/swing/plaf/basic/BasicButtonUI.java